feat: implementa criação do user
