# src/models/interfaces/User/CreateUserRequest.ts
@@ -1,0 +1,5 @@
+export interface CreateUserRequest {
+    nome: string;
+    email: string;
+    senha: string;
+}
