# src/routes.ts
@@ -1,6 +1,7 @@
 import { Router, Request, Response } from "express";
 import multer from "multer";
 import uploadConfig from "./config/multer"
+import { CreateUserController } from "./controllers/User/CreateUserController";
 
 const router = Router();
 const upload = multer(uploadConfig.upload("./tmp"));
@@ -10,7 +11,6 @@ router.get("/test",(request: Request, response: Response) => {
 });
 
 // User Routes
-
-
+router.post('/user', new CreateUserController().handle);
 
 export { router };
